spacing-beta - minor bugfix on debuging

--- a/scss/sin-core/grid/_spacing-beta.scss
+++ b/scss/sin-core/grid/_spacing-beta.scss
@@ -21,7 +21,6 @@
     @debug unquote('Current Direction: #{$current-direction}');
     @debug unquote('Value: #{$value}');
     @debug unquote('Is Important: #{$is-important}');
-    @debug unquote('Scale: #{$scale}');
   }
 
   // Handle Gap exception
